--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h4>Data dinámica</h4>
             <hr>
             
-            
+            <div ng-include="tblProfesores"></div>
 
 
 
